--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 
       <div class="col-md-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-          
-        </section>
+        <div>
+          <h5 class="h5" id="forecast-header"></h5>
+          <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        </div>
+       
       </div>
     </div>
   </div>
