--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <div class="col-md-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <div>
-          <h5 class="h5" id="forecast-header"></h5>
+        <div class="forecast">
+          <h5 class="h5 mb-0" id="forecast-header"></h5>
           <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
         </div>
        
